--- a/stylesheets/scss/_header.scss
+++ b/stylesheets/scss/_header.scss
@@ -21,7 +21,7 @@
       display: none;
       position: absolute;
       list-style: none;
-      width: 133px;
+      width: 100%;
       padding: 0px 3px;
       margin: 0px;
       z-index: 1;
