--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,8 +17,12 @@
     <a href="#" {% if page.documentation_selected %}class="selected"{% endif %}>Training</a>
     <ul>
       <li><a href="/documentation/overview.html">Overview</a></li>
-      <li><a href="/documentation/getting_started.html">Getting Started</a></li>
-      <li><a href="/documentation/advanced.html">Advanced</a></li>
+      <li><a href="/documentation/getting_started.html">Basic Use</a></li>
+      <li><a href="/documentation/advanced.html">Advanced Use</a></li>
+      <li><a href="/documentation/philosophy.html">Philosophy</a></li>
+      <li><a href="/documentation/model.html">Model</a></li>
+      <li><a href="/documentation/styling.html">Styling</a></li>
+      <li><a href="/documentation/grouping.html">Grouping</a></li>
     </ul>
   </section>
   <a href="/download.html">Download</a>
