typos and terminology fixes

--- a/stylesheets/scss/_interaction.scss
+++ b/stylesheets/scss/_interaction.scss
@@ -98,7 +98,7 @@ li[data-ur-set="toggler"] {
 
 .attributes .advanced_tab{
   h4 {
-    margin-bottom: 5px;;
+    margin-bottom: 5px;
   }
   ul {
     list-style-type: none;
