--- a/_layouts/geocode-interaction-sub.html
+++ b/_layouts/geocode-interaction-sub.html
@@ -11,7 +11,7 @@
     <nav id="menu">
       {% capture tmp %}
       <a href="/" id="uraniumlogo" {% if page.home_selected %}class="selected"{% endif %}></a>
-      <div class='menu_widget'>
+      <section class='menu_widget'>
         <a href="/interaction_list.html" {% if page.interaction_selected %}class="selected"{% endif %}>Interactions</a>
         <ul>
           <li><a href="/interactions/carousel.html">Carousel</a></li>
@@ -21,8 +21,20 @@
           <li><a href="/interactions/toggler.html">Toggler</a></li>
           <li><a href="/interactions/zoom.html">Zoom</a></li>
         </ul>
-      </div>
-      <a href="/about.html" {% if page.about_selected %}class="selected"{% endif %}>About</a>
+      </section>
+      <section class="menu_widget">
+        <a href="#" {% if page.documentation_selected %}class="selected"{% endif %}>Training</a>
+        <ul>
+          <li><a href="/documentation/overview.html">Overview</a></li>
+          <li><a href="/documentation/getting_started.html">Basic Use</a></li>
+          <li><a href="/documentation/advanced.html">Advanced Use</a></li>
+          <li><a href="/documentation/philosophy.html">Philosophy</a></li>
+          <li><a href="/documentation/model.html">Model</a></li>
+          <li><a href="/documentation/styling.html">Styling</a></li>
+          <li><a href="/documentation/grouping.html">Grouping</a></li>
+        </ul>
+      </section>
+      <a href="/download.html">Download</a>
       {% endcapture %}
       {{ tmp | strip_newlines | remove: "  " }}
     </nav>
