The menu has a class of menu_interaction, rather than menu_widget

--- a/_layouts/geocode-interaction-sub.html
+++ b/_layouts/geocode-interaction-sub.html
@@ -11,7 +11,7 @@
     <nav id="menu">
       {% capture tmp %}
       <a href="/" id="uraniumlogo" {% if page.home_selected %}class="selected"{% endif %}></a>
-      <section class='menu_widget'>
+      <section class='menu_interaction'>
         <a href="/interaction_list.html" {% if page.interaction_selected %}class="selected"{% endif %}>Interactions</a>
         <ul>
           <li><a href="/interactions/carousel.html">Carousel</a></li>
@@ -22,7 +22,7 @@
           <li><a href="/interactions/zoom.html">Zoom</a></li>
         </ul>
       </section>
-      <section class="menu_widget">
+      <section class="menu_interaction">
         <a href="#" {% if page.documentation_selected %}class="selected"{% endif %}>Training</a>
         <ul>
           <li><a href="/documentation/overview.html">Overview</a></li>
