--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <nav id="menu">
   {% capture tmp %}
   <a href="/" id="uraniumlogo" {% if page.home_selected %}class="selected"{% endif %}></a>
-  <section class='menu_widget'>
+  <section class='menu_interaction'>
   	<a href="#" {% if page.interaction_selected %}class="selected"{% endif %}>Interactions</a>
   	<ul>
   		<li><a href="/interactions/carousel.html">Carousel</a></li>
@@ -13,7 +13,7 @@
   		<li><a href="/interactions/zoom.html">Zoom</a></li>
   	</ul>
   </section>
-  <section class="menu_widget">
+  <section class="menu_interaction">
     <a href="#" {% if page.documentation_selected %}class="selected"{% endif %}>Training</a>
     <ul>
       <li><a href="/documentation/overview.html">Overview</a></li>
