--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -274,13 +274,13 @@ select {
     vertical-align: middle;
     width: 200px;
     height: 60px; }
-  #menu .menu_widget {
+  #menu .menu_interaction {
     text-align: center;
     position: relative; }
-    #menu .menu_widget > a {
+    #menu .menu_interaction > a {
       color: inherit;
       display: block; }
-    #menu .menu_widget > ul {
+    #menu .menu_interaction > ul {
       display: none;
       position: absolute;
       list-style: none;
@@ -288,32 +288,32 @@ select {
       padding: 0px 3px;
       margin: 0px;
       z-index: 1; }
-      #menu .menu_widget > ul li {
+      #menu .menu_interaction > ul li {
         background-color: gold;
         border: 1px solid #505050;
         color: #fffafa;
         padding: 3px 0px; }
-        #menu .menu_widget > ul li a {
+        #menu .menu_interaction > ul li a {
           color: #323232;
           display: block;
           font: 300 14px "Open Sans", Arial, sans-serif; }
-          #menu .menu_widget > ul li a:hover {
+          #menu .menu_interaction > ul li a:hover {
             color: gold; }
-      #menu .menu_widget > ul li:hover {
+      #menu .menu_interaction > ul li:hover {
         background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #323232), color-stop(100%, #252525));
         background: -webkit-linear-gradient(#323232, #252525);
         background: -moz-linear-gradient(#323232, #252525);
         background: -o-linear-gradient(#323232, #252525);
         background: linear-gradient(#323232, #252525); }
-    #menu .menu_widget:hover {
+    #menu .menu_interaction:hover {
       background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #323232), color-stop(100%, #252525));
       background: -webkit-linear-gradient(#323232, #252525);
       background: -moz-linear-gradient(#323232, #252525);
       background: -o-linear-gradient(#323232, #252525);
       background: linear-gradient(#323232, #252525); }
-      #menu .menu_widget:hover > ul {
+      #menu .menu_interaction:hover > ul {
         display: block; }
-    #menu .menu_widget::after {
+    #menu .menu_interaction::after {
       content: "choose";
       position: absolute;
       bottom: 2px;
@@ -377,13 +377,13 @@ select {
         margin: 5px 0px 0px 0px; }
       #menu > * {
         border-left: none; }
-      #menu .menu_widget, #menu > a {
+      #menu .menu_interaction, #menu > a {
         width: 33%;
         font-size: 10px;
         border-top: 1px solid #505050;
         line-height: 40px;
         border-right: none; }
-      #menu .menu_widget > ul {
+      #menu .menu_interaction > ul {
         padding: 0px; }
       #menu .selected {
         -webkit-border-radius: 0;
@@ -851,7 +851,7 @@ body#documentation_page #end_product *[data-ur-toggler-component='content'][data
   display: none; }
 body#documentation_page #carousel_tutorial .final {
   margin: auto;
-  width: 400px; }
+  max-width: 400px; }
   body#documentation_page #carousel_tutorial .final [data-ur-set="carousel"] {
     height: 140px; }
   body#documentation_page #carousel_tutorial .final [data-ur-carousel-component="dots"] {
