--- a/stylesheets/scss/_tutorial.scss
+++ b/stylesheets/scss/_tutorial.scss
@@ -32,7 +32,7 @@ body#documentation_page {
   #carousel_tutorial {
     .final {
       margin: auto;
-      width: 400px;
+      max-width: 400px;
       [data-ur-set="carousel"] {
         height: 140px;
       }
