--- a/stylesheets/scss/_widget.scss
+++ b/stylesheets/scss/_widget.scss
@@ -104,10 +104,10 @@ li[data-ur-set="toggler"] {
 .attributes *[data-ur-set="tabs"][data-ur-tab-id="html"] {
   text-align: left; }
 
-.attributes #tab_widget *[data-ur-set="tabs"] *[data-ur-tabs-component="button"] {
+.attributes #tab_interaction *[data-ur-set="tabs"] *[data-ur-tabs-component="button"] {
   background: silver; }
 
-.attributes #tab_widget *[data-ur-set="tabs"] *[data-ur-tabs-component="content"] {
+.attributes #tab_interaction *[data-ur-set="tabs"] *[data-ur-tabs-component="content"] {
   background: silver; }
 
 .attributes .advanced_tab ul {
