--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -58,7 +58,9 @@ select {
 
 /* Body Text */
 #textbody {
-  margin: 10px 10%; }
+  margin: 10px auto;
+  padding: 0 10px;
+  max-width: 820px; }
   @media screen and (max-width: 479px), screen and (max-height: 479px) {
     #textbody {
       margin: 10px; } }
@@ -580,6 +582,9 @@ select {
       -o-border-radius: 5px;
       border-radius: 5px;
       max-width: 28%; }
+  #home_page [data-ur-toggler-component="button"] {
+    width: 200px;
+    text-align: center; }
 
 /* Responsive*/
 /* Example Styles */
