--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -11,6 +11,7 @@ html {
 
 body {
   -webkit-text-size-adjust: none;
+  -webkit-font-smoothing: antialiased;
   background: #323232;
   color: #eeeeee;
   font: 300 14px "Open Sans", Arial, sans-serif;
@@ -264,7 +265,7 @@ select {
   text-align: center;
   /* Its direct children */ }
   #menu #uraniumlogo {
-    background: url('/images/uraniumlogo.png?1378929677') no-repeat 0% 50%;
+    background: url('/images/uraniumlogo.png?1381425622') no-repeat 0% 50%;
     -webkit-background-size: 100% auto;
     -moz-background-size: 100% auto;
     -o-background-size: 100% auto;
@@ -362,7 +363,7 @@ select {
     #menu {
       margin: 0px 0px 10px 0px; }
       #menu #uraniumlogo {
-        background: gold url('/images/uraniumlogo.png?1378929677') no-repeat 50% 50%;
+        background: gold url('/images/uraniumlogo.png?1381425622') no-repeat 50% 50%;
         -webkit-background-size: 100px 30px;
         -moz-background-size: 100px 30px;
         -o-background-size: 100px 30px;
