load tuning, SEO, and font availability scripts

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,6 @@
 <footer id="footer">
-  <span>Brought to you by&hellip;</span>
-  <br />
-  <a id="moovweblogo" href="http://www.moovweb.com/"><img src="/images/moovweblogo.png" alt="Moovweb" /></a>
+  <div><span>Brought to you by&hellip;</span></div>
+  <a id="moovweblogo" href="http://www.moovweb.com/" target="_blank"><img src="/images/moovweblogo.png" alt="Moovweb" /></a>
   <nav>
     Uranium &copy; 2013 |
     <a href="/about.html">About</a> |
@@ -9,3 +8,5 @@
     <a href="mailto:uranium@moovweb.com">Contact</a>
   </nav>
 </footer>
+<script src="/src/jquery-1.9.1.min.js"></script>
+<script src="/src/jquery.uranium.js"></script>
