--- a/stylesheets/scss/_header.scss
+++ b/stylesheets/scss/_header.scss
@@ -135,7 +135,7 @@
   background: gray;
   color: white;
   font-weight: normal;
-  font: 15px "Collegiate", sans-serif;
+  font: 15px sans-serif;
   line-height: 27px;
   position: absolute;
   top: 0;
