--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,21 +1,25 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
-<title>Uranium JS | {{ page.title }}</title>
+<title>{{ page.title }} | Uranium Declarative Javascript Interaction Library</title>
+<meta name="keywords" content="Uranium {{ page.title }} page, declarative javascript interactions, declarative javascript library, declarative javascript, javascript interactions, javascript widgets, javascript library, open source, javascript, interactions, widgets, jquery" />
+<meta name="description" content="The {{ page.title }} page for Uranium, a declarative Javascript library that lets web page author add convenient interactions such as carousels, togglers, tabs, and geolocation to their pages without writing a single line of Javascript." />
 <link href="http://fonts.googleapis.com/css?family=Crete+Round:400italic|Open+Sans:300,300italic,400|Ultra|Yellowtail" rel="stylesheet" />
 <link href="/stylesheets/main.css" rel="stylesheet" />
-<script src="/src/jquery-1.9.1.min.js"></script>
-<script src="/src/jquery.uranium.js"></script>
-
 <script type="text/javascript">
-
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-26739163-2']);
   _gaq.push(['_trackPageview']);
-
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
-
+</script>
+<script src="http://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
+<script>
+  WebFont.load({
+    google: {
+      families: ['Open Sans', 'Crete Round', 'Ultra']
+    }
+  });
 </script>
