add docs for initializing ajax-loaded elements

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,7 @@
       <li><a href="/documentation/overview.html">Overview</a></li>
       <li><a href="/documentation/getting_started.html">Basic Use</a></li>
       <li><a href="/documentation/advanced.html">Advanced Use</a></li>
+      <li><a href="/documentation/ajax.html">Using AJAX</a></li>
       <li><a href="/documentation/philosophy.html">Philosophy</a></li>
       <li><a href="/documentation/model.html">Model</a></li>
       <li><a href="/documentation/styling.html">Styling</a></li>
