Adding documentation as per M David's suggestion - plus updating some of the interaction attributes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,7 @@
   		<li><a href="/interactions/input_clear.html">Input Clear</a></li>
   		<li><a href="/interactions/tabs.html">Tabs</a></li>
   		<li><a href="/interactions/toggler.html">Toggler</a></li>
+      <li><a href="/interactions/validator.html">Validator</a></li>
   		<li><a href="/interactions/zoom.html">Zoom</a></li>
   	</ul>
   </section>
