--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <p>Brought to you by &hellip;</p>
   <p>
     <a id="moovweblogo" href="http://www.moovweb.com/" target="_blank">
-      <img src="/images/moovweblogo.png" alt="Moovweb" />
+      <img src="{{site.baseurl}}images/moovweblogo.png" alt="Moovweb" />
     </a>
   </p>
   <nav>
@@ -12,10 +12,10 @@
     <a href="mailto:uranium@moovweb.com">Contact</a>
   </nav>
 </footer>
-<script src="/src/jquery-1.9.1.min.js"></script>
-<script src="/src/jquery.uranium.js"></script>
-<script src="/src/shCore.custom.js"></script>
-<script src="/src/shBrushJScript.js"></script>
-<script src="/src/shBrushSass.js"></script>
-<script src="/src/shBrushNull.js"></script>
-<script src="/src/shInit.js"></script>
+<script src="{{site.baseurl}}src/jquery-1.9.1.min.js"></script>
+<script src="{{site.baseurl}}src/jquery.uranium.js"></script>
+<script src="{{site.baseurl}}src/shCore.custom.js"></script>
+<script src="{{site.baseurl}}src/shBrushJScript.js"></script>
+<script src="{{site.baseurl}}src/shBrushSass.js"></script>
+<script src="{{site.baseurl}}src/shBrushXml.js"></script>
+<script src="{{site.baseurl}}src/shInit.js"></script>
