--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,29 +6,29 @@
       <li class="menu_interaction">
         <a href="javascript:void(0)" {% if page.interaction_selected %}class="selected"{% endif %}>Interactions</a>
         <ul>
-          <li><a href="/interactions/carousel.html">Carousel</a></li>
-          <li><a href="/interactions/geocode.html">Geolocation</a></li>
-          <li><a href="/interactions/input_clear.html">Input Clear</a></li>
-          <li><a href="/interactions/tabs.html">Tabs</a></li>
-          <li><a href="/interactions/toggler.html">Toggler</a></li>
-          <li><a href="/interactions/zoom.html">Zoom</a></li>
+          <li><a href="{{site.baseurl}}interactions/carousel.html">Carousel</a></li>
+          <li><a href="{{site.baseurl}}interactions/geocode.html">Geolocation</a></li>
+          <li><a href="{{site.baseurl}}interactions/input_clear.html">Input Clear</a></li>
+          <li><a href="{{site.baseurl}}interactions/tabs.html">Tabs</a></li>
+          <li><a href="{{site.baseurl}}interactions/toggler.html">Toggler</a></li>
+          <li><a href="{{site.baseurl}}interactions/zoom.html">Zoom</a></li>
         </ul>
       </li>
       <li class="menu_interaction">
         <a href="javascript:void(0)" {% if page.documentation_selected %}class="selected"{% endif %}>Training</a>
         <ul>
-          <li><a href="/documentation/overview.html">Overview</a></li>
-          <li><a href="/documentation/getting_started.html">Basic Use</a></li>
-          <li><a href="/documentation/advanced.html">Advanced Use</a></li>
-          <li><a href="/documentation/ajax.html">Using AJAX</a></li>
-          <li><a href="/documentation/philosophy.html">Philosophy</a></li>
-          <li><a href="/documentation/model.html">Model</a></li>
-          <li><a href="/documentation/styling.html">Styling</a></li>
-          <li><a href="/documentation/grouping.html">Grouping</a></li>
+          <li><a href="{{site.baseurl}}documentation/overview.html">Overview</a></li>
+          <li><a href="{{site.baseurl}}documentation/getting_started.html">Basic Use</a></li>
+          <li><a href="{{site.baseurl}}documentation/advanced.html">Advanced Use</a></li>
+          <li><a href="{{site.baseurl}}documentation/ajax.html">Using AJAX</a></li>
+          <li><a href="{{site.baseurl}}documentation/philosophy.html">Philosophy</a></li>
+          <li><a href="{{site.baseurl}}documentation/model.html">Model</a></li>
+          <li><a href="{{site.baseurl}}documentation/styling.html">Styling</a></li>
+          <li><a href="{{site.baseurl}}documentation/grouping.html">Grouping</a></li>
         </ul>
       </li>
       <li>
-        <a href="/download.html">Download</a>
+        <a href="{{site.baseurl}}download.html">Download</a>
       </li>
     </ul>
   </div>
