--- a/stylesheets/scss/main.scss
+++ b/stylesheets/scss/main.scss
@@ -1,11 +1,11 @@
 $footer-height: 228px;
 @import "moovui/moovui";
 
-@import "lib";
+@import "uranium";
 @import "header";
 @import "footer";
-/*@import "base";
-@import "index";
+@import "base";
+/*@import "index";
 @import "example";
 
 @import "highlight_code";
@@ -24,12 +24,12 @@ $footer-height: 228px;
 @import "carousel";
 @import "geocode";
 // @import "map";
-@import "resizer";
+//@import "resizer";
 // @import "select_buttons";
 // @import "select_lists";
 @import "tabs";
-@import "toggler";
-@import "zoom";
+//@import "toggler";
+//@import "zoom";
 // @import "swipe_toggle";
 // @import "flex_table";
-@import "input_clear";
+//@import "input_clear";
